# cxx-and-rust

./: CMakeLists.txt  README.md  main.cpp
.tipi/: env  id
contrib/corrosion/: CMakeLists.txt
contrib/corrosion/cmake/: Corrosion.cmake
rust/src/: lib.rs
